--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -30,12 +30,12 @@ OTB_CREATE_APPLICATION(NAME TrainGMMApp
                        LINK_LIBRARIES ${${otb-module}_LIBRARIES}
 )
 
-# OTB_CREATE_APPLICATION(NAME TrainGMMSelectionApp
-#                        SOURCES otbTrainGMMSelectionApp.cxx
-#                        LINK_LIBRARIES ${${otb-module}_LIBRARIES}
-# )
+OTB_CREATE_APPLICATION(NAME TrainGMMSelectionApp
+                       SOURCES otbTrainGMMSelectionApp.cxx
+                       LINK_LIBRARIES ${${otb-module}_LIBRARIES}
+)
 
-# OTB_CREATE_APPLICATION(NAME PredictGMMApp
-#                        SOURCES otbPredictGMMApp.cxx
-#                        LINK_LIBRARIES ${${otb-module}_LIBRARIES}
-# )
+OTB_CREATE_APPLICATION(NAME PredictGMMApp
+                       SOURCES otbPredictGMMApp.cxx
+                       LINK_LIBRARIES ${${otb-module}_LIBRARIES}
+)
